# RustAuth

./: .env  Cargo.toml  README.md  example_env.md
frontend/: index.html
src/: main.rs
src/models/: user.rs
src/routes/: auth.rs
src/utils/: auth.rs  auth_middleware.rs
