[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.3.0"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
chrono = { version = "0.4" , features = ["serde", "clock"] }
headers = "0.4"
http = "0.2"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
